unpackaged/main/default/objects/Account/fields/loooooooooooooooooooooooooooongname87__c.field-meta.xml
<CustomField>
    <fullName>loooooooooooooooooooooooooooongname87__c</fullName>
    <defaultValue>"heeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeello"</defaultValue>
    <description>Does this contribute to the length?</description>
    <inlineHelpText>Or does this contribute to the length?</inlineHelpText>
    <label>loooooooooooooooooooooooooooongname87</label>
    <length>255</length>
    <type>Text</type>
</CustomField>