unpackaged/main/default/objects/Account/fields/MrPicklistField__c.field-meta.xml
<CustomField>
    <fullName>MrPicklistField__c</fullName>
    <label>MrPicklistField</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MrGlobalValueSet</valueSetName>
    </valueSet>
</CustomField>