unpackaged/main/default/objects/Account/fields/picky__c.field-meta.xml
<CustomField>
    <fullName>picky__c</fullName>
    <label>picky</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>one</fullName>
            </value>
            <value>
                <fullName>two</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>