unpackaged/main/default/objects/Account/recordTypes/MrRecordType.recordType-meta.xml
<RecordType>
    <fullName>MrRecordType</fullName>
    <active>true</active>
    <label>MrRecordType</label>
</RecordType>